--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,70 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --fg: #76ABAE;
+    --bg: #222831;
+    --txt: #eeeeee;
+    --bg2: #31363F;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bg);
+    color: var(--txt);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.url-form {
+    width: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: flex;
+    height: fit-content;
+    translate: -50% -50%;
+    align-items: center;
+    border: 5px solid var(--fg);
+    border-radius: 10px;
+    background-color: var(--bg2);
+}
+
+.url-form input[type="text"] {
+    width: calc(100% - 70px);
+    height: 40px;
+    padding-left: 10px;
+    border: none;
+    background-color: var(--bg2);
+    border-radius: 10px 0 0 10px;
+    outline: none;
+}
+
+.url-form button[type="submit"] {
+    padding-inline: 10px;
+    border: none;
+    background-color: var(--fg);
+    cursor: pointer;
+}
+
+.url-form label {
+    position: absolute;
+    left: 0;
+    bottom: -100%;
+    height: 40px;
+    font-family: "bahnschrift", sans-serif;
+}
+
+.hidden {
+    display: none;
+}
+
+.link {
+    color: #76ABAE;
+    text-decoration: underline;
+    cursor: pointer;
 }
